name:                static-warp
version:             1.0.0
author:              David Johnson
maintainer:          djohnson.m@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable web
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5
                     , wai
                     , wai-app-static
                     , wai-extra
                     , warp
                     , optparse-applicative
                     , directory
  default-language:    Haskell2010
